--- a/submissions/git_submission_heggelund.Rmd
+++ b/submissions/git_submission_heggelund.Rmd
@@ -1,10 +1,21 @@
 ---
 title: "git_submission_heggelund"
+author: "Alf Henrik Heggelund"
 output: html_document
+html_document:
+df_print: paged
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE)
 ```
 
+ 
+ 
+ ## leser data sett 
 
+```{r}
+
+library(readr)
+dataBED <- read_csv("submissions/data/dataBED.csv")
+View(dataBED)
