--- a/submissions/git_submission_Sushmit_Dhar.Rmd
+++ b/submissions/git_submission_Sushmit_Dhar.Rmd
@@ -9,7 +9,7 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
-library(dplyr)
+library(tidyverse)
 library(kableExtra)
 source("R/plotBED.R")
 dframe <- read.csv("data/dataBED.csv")
